finalize the configuration for MongoDB with Djongo

--- a/.env.dev
+++ b/.env.dev
@@ -1,10 +1,7 @@
 DEBUG=1
-SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+SECRET_KEY=svmv+s(fwlwzxq7d7kmiu_m9^hvu$^wi5q34zh5_s2=khsqpcv
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 0.0.0.0
 NOSQL_ENGINE=djongo
-SQL_DATABASE=myapp-djongo-db
-SQL_USER=hello_django
-SQL_PASSWORD=hello_django
-SQL_HOST=db
-SQL_PORT=5432
-DATABASE=postgres
+NOSQL_NAME=test
+NOSQL_HOST=mongodb
+NOSQL_ENFORCE_SCHEMA=False
